# tpm2-algtest

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  flake.nix  prepare_result.py  rsa_compute_keys.py  run.sh  run_algtest.py  run_image.py  tpm2-algtest.spec.rpkg
algtest/: context.h  create.c  create.h  create_util.c  create_util.h  createloaded.c  createloaded.h  createprimary.c  createprimary.h  cryptoops.c  cryptoops.h  ecdh_keygen.c  ecdh_keygen.h  key_params_generator.c  key_params_generator.h  keygen.c  keygen.h  logging.c  logging.h  nonce.c  nonce.h  object_util.c  object_util.h  options.c  options.h  perf.c  perf.h  perf_util.c  perf_util.h  rng.c  rng.h  scenario.c  scenario.h  sign.c  sign.h  status.c  status.h  util.c  util.h  utils.c  (+3 more)
lib/: status.c  status.h  tpm2_options.c
tools/: tpm2_algtest.c
